<resources>
    <string name="app_name">BirthdayReminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day_list_fragment_label">{month}</string>
    <string name="monthListFragmentTitle">Monat…</string>
    <string name="add_birthday">Geburtstag hinzufügen</string>
    <string name="hint_name">Name</string>
    <string name="button_save">Speichern</string>
    <string name="hint_year">Geburtsjahr</string>
    <string name="hint_surname">Familienname</string>
    <string name="day_title">Geburtstage am %1$d. %2$s</string>
    <string name="add_birthday_title">Neu am %1$d. %2$s:</string>
    <string name="hint_month">Monat</string>
    <string name="hint_day">Tag</string>
    <string name="db_insert_ignored">Nicht gespeichert, bereits vorhanden?</string>
    <string name="db_insert_successful">Erfolgreich vermerkt.</string>
    <string name="alarmSetIconContentDescription">alarm set</string>
    <string name="alarmNotSetIconContentDescription">alarm not set</string>
    <string name="alarmOnIconContentDescription">alarm on</string>
    <string name="alarmOffIconContentDescription">alarm off</string>
    <string name="done">Fertig</string>
    <string name="new_alarm_textview">Neuer Alarm</string>
    <string name="name">Name</string>
    <string name="surname">Nachname</string>
    <string name="year">Jahr</string>
    <string name="first_reminder">1. Erinnerung:</string>
    <string name="repeat">Alle …</string>
    <string name="repeat_all">"Wiederholen alle "</string>
    <string name="last_reminder">Letzte Erinnerung:</string>
    <string name="days">days</string>
    <string name="days_before">Tage vorher</string>
    <string name="number">Anzahl</string>
    <string name="days_repeat_after_text">Tage wiederholen</string>
    <string name="all">Alle</string>
    <string name="notificationActive">Benachrichtigung wird gesendet</string>
    <string name="defaultChannel">Birthday Reminder default channel</string>
    <string name="notificationDescription">Notifications from Birthday Reminder</string>
    <string name="deepLinkNotificationTitle">Geburtstagsalarm</string>
    <string name="edit_notification">Benachrichtigungseinstellungen</string>
    <string name="nextReminderDate">Nächste Erinnerung:</string>
    <string-array name="months">
        <item>Januar</item>
        <item>Februar</item>
        <item>März</item>
        <item>April</item>
        <item>Mai</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>August</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Dezember</item>
    </string-array>
</resources>